--- a/src/package.json
+++ b/src/package.json
@@ -14,9 +14,12 @@
     "chalk": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
-    "passport": "^0.4.0"
+    "node-xlsx": "^0.15.0",
+    "passport": "^0.4.0",
+    "read-excel-file": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.0",
